Date Added also bug for Payroll java.sql.date