@@ -89,7 +89,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>24</maven.compiler.release>
+        <maven.compiler.release>23</maven.compiler.release>
     </properties>
     
     <build>
@@ -102,19 +102,18 @@
                 <mainClass>com.cjme.motorphsystem.Main</mainClass>
             </configuration>
         </plugin>
+        
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <source>24</source>
-          <target>24</target>
-          <release>24</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+        <source>23</source>
+        <target>23</target>
+        <release>23</release>
         </configuration>
       </plugin>
+      
     </plugins>
     </build>
 
